tests/baselines/reference/moduleResolutionNoTs.errors.txt
tests/cases/compiler/user.ts(1,15): error TS2307: Cannot find module './m.ts'.


==== tests/cases/compiler/m.ts (0 errors) ====
    export default 0;
    
==== tests/cases/compiler/user.ts (1 errors) ====
    import x from "./m.ts";
                  ~~~~~~~~
!!! error TS2307: Cannot find module './m.ts'.
    